Fixing up the SW archives a bit to use the actual jar on the CP